加入狀態切換表

--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -7,6 +7,7 @@ block content
 
   link(rel="stylesheet", href="/stylesheets/queue_order.css")
   script(src="/javascript/queue_order.js")
+  script(src="/javascript/queue_order_status.js")
 
   .container
     .row
@@ -56,7 +57,18 @@ block content
               td(data-ctrl='date', style='width: 150px')= order.outputDate
                 //- input.datepicker(data-date-format='mm/dd/yyyy').form-control(type='text')
               td
-                button.btn.btn-success= order.status
+                - if(order.status == '已結案')
+                  button.status.btn.btn-success= order.status
+                - else if(order.status == '已出貨')
+                  button.status.btn.btn-primary= order.status
+                - else if(order.status == '尚未出貨')
+                  button.status.btn.btn-info= order.status
+                - else if(order.status == '尚未完成')
+                  button.status.btn.btn-warning= order.status
+                - else if(order.status == '訂單取消')
+                  button.status.btn.btn-danger= order.status
+                - else
+                  button.status.btn.btn-default 尚未設定
               td(style='width: 130px')
                 button.predelete.btn.btn-danger.ctrl(type='button', data-toggle='modal', data-target='#delDialog' )&attributes(uid)
                   span.glyphicon.glyphicon-trash(aria-hidden='true')
@@ -121,3 +133,26 @@ block content
         .modal-footer
           button.btn.btn-default(type='button', data-dismiss='modal') 取消
           button.btn.btn-success(type='button') 結案並且隱藏
+  #statusDialog.modal.fade.bs-example-modal-sm(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
+    .modal-dialog.modal-sm
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal')
+            span(aria-hidden='true') ×
+            span.sr-only Close
+          h4.modal-title 訂單狀況選擇
+        .modal-body
+          p
+            button.statusChoose.btn.btn-success(style="width: 100%") 已結案
+          p
+            button.statusChoose.btn.btn-primary(style="width: 100%") 已出貨
+          p
+            button.statusChoose.btn.btn-info(style="width: 100%") 尚未出貨
+          p
+            button.statusChoose.btn.btn-warning(style="width: 100%") 尚未完成
+          p
+            button.statusChoose.btn.btn-danger(style="width: 100%") 訂單取消
+          p
+            button.status.btn.btn-default(style="width: 100%") 無狀態
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
