--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -41,11 +41,13 @@ html
                 span.caret
               ul.dropdown-menu(role='menu')
                 li
-                  a(href='/crud/customer') 經銷商設定
-                li
                   a(href='/crud/product') 產品設定
                 li
                   a(href='/crud/line') 產線設定
+                li
+                  a(href='/crud/battery') 電池型號設定
+                li
+                  a(href='/crud/customer') 經銷商資訊設定
                 li.divider
                 li
                   a(href='/crud/account') 帳號管理
