修正 battery 在表單中的問題

--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -23,7 +23,7 @@ html
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href='/order') 訂單佇列
+              a(href='/order/startTime') 訂單佇列
             li
               a(href='/factory') 產線佇列
           //- form.navbar-form.navbar-left(role='search')
