--- a/lokovei-ERP/asset/stylesheets/queue_order.css
+++ b/lokovei-ERP/asset/stylesheets/queue_order.css
@@ -27,6 +27,12 @@
 }
 
 /* line 22, ../sass/queue_order.sass */
+.statusChoose {
+  color: red;
+  margin: 0 auto;
+}
+
+/* line 26, ../sass/queue_order.sass */
 input[type="number"] {
   width: 60px;
 }
