--- a/lokovei-ERP/views/index.jade
+++ b/lokovei-ERP/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   link(rel="stylesheet", href="/stylesheets/welcome.css")
+  script(src="/javascript/login.js")
   .center
     h1 lokovei 訂單管理系統
     br
@@ -21,12 +22,12 @@ block content
           .modal-body
             p
               .form-group
-                label.sr-only(for='exampleInputEmail2') 帳號
-                input#exampleInputEmail2.form-control(type='text', placeholder='帳號')
+                label.sr-only(for='account') 帳號
+                input#account.form-control(type='text', placeholder='帳號')
             p
               .form-group
-                label.sr-only(for='exampleInputPassword2') 密碼
-                input#exampleInputPassword2.form-control(type='password', placeholder='密碼')
+                label.sr-only(for='pwd') 密碼
+                input#pwd.form-control(type='password', placeholder='密碼')
           .modal-footer
             button.btn.btn-default(type='button', data-dismiss='modal') 取消
-            button.btn.btn-success(type='button') 登入
+            button#login.btn.btn-success(type='button') 登入
