--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -18,7 +18,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/order') lokovei 內部訂單管理
+          a.navbar-brand(href='/') lokovei 內部訂單管理
         // Collect the nav links, forms, and other content for toggling
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
