--- a/lokovei-ERP/asset/sass/queue_factory.sass
+++ b/lokovei-ERP/asset/sass/queue_factory.sass
@@ -32,7 +32,7 @@
 .line
   // width: 700px
   // overflow-x: scroll
-  height: 230px
+  height: 180px
   padding-left: 12px
   // border: 1px solid red
   @include display-flex
@@ -54,4 +54,4 @@
   margin-right: 2px
   padding-right: 4px
   float: right
-  cursor: help
+  cursor: pointer
