--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -11,7 +11,6 @@ html
   body
     nav.navbar.navbar-default(role='navigation')
       .container-fluid
-        // Brand and toggle get grouped for better mobile display
         .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
             span.sr-only Toggle navigation
@@ -19,7 +18,6 @@ html
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='/') lokovei 內部訂單管理
-        // Collect the nav links, forms, and other content for toggling
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -34,7 +32,7 @@ html
             li
               a(href='#') 您好，陳柏安
             li
-              a(href='#' type='button') 登出
+              a(href='/logout' type='button') 登出
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
                 | 工作台
