--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -155,6 +155,6 @@ block content
           p
             button.statusChoose.btn.btn-danger(style="width: 100%", data-value='訂單取消') 訂單取消
           p
-            button.status.btn.btn-default(style="width: 100%", data-value='無狀態') 無狀態
+            button.statusChoose.btn.btn-default(style="width: 100%", data-value='無狀態') 無狀態
         .modal-footer
           button.btn.btn-default(type='button', data-dismiss='modal') Close
