--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -2,12 +2,13 @@ doctype html
 html
   head
     title lokovei 內部訂單管理
-    script(src="https://code.jquery.com/jquery-2.1.4.min.js")
-    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" )
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
-    //- script(src="javascript/jquery-2.1.4.min.js")
-    //- link(rel="stylesheet", href="stylesheets/bootstrap.min.css")
-    //- script(src="javascript/bootstrap.min.js")
+    //- script(src="https://code.jquery.com/jquery-2.1.4.min.js")
+    //- link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" )
+    //- script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
+    link(rel="stylesheet", href="stylesheets/bootstrap.min.css")
+
+    script(src="/javascript/jquery-2.1.4.min.js")
+    script(src="/javascript/bootstrap.min.js")
   body
     nav.navbar.navbar-default(role='navigation')
       .container-fluid
