--- a/lokovei-ERP/asset/stylesheets/queue_factory.css
+++ b/lokovei-ERP/asset/stylesheets/queue_factory.css
@@ -1,41 +1,44 @@
 /* line 4, ../sass/queue_factory.sass */
 .job {
-  width: 180px;
-  min-width: 180px;
-  max-height: 230px;
+  position: relative;
+  width: 150px;
+  height: 130px;
+  max-height: 160px;
+  overflow: visible;
   margin-right: 4px;
   cursor: -webkit-grab;
 }
-/* line 11, ../sass/queue_factory.sass */
+/* line 12, ../sass/queue_factory.sass */
 .job:last-child {
   margin-right: 22px;
 }
-/* line 13, ../sass/queue_factory.sass */
+/* line 14, ../sass/queue_factory.sass */
 .job .toRight {
   margin-left: auto;
 }
 
-/* line 18, ../sass/queue_factory.sass */
+/* line 19, ../sass/queue_factory.sass */
 .lineName {
   margin-right: 12px;
 }
 
-/* line 21, ../sass/queue_factory.sass */
+/* line 22, ../sass/queue_factory.sass */
 .day {
   float: left;
   border-radius: 8px;
+  min-width: 150px;
   background-color: #F5F5F5;
   margin-right: 12px;
 }
 
-/* line 28, ../sass/queue_factory.sass */
+/* line 30, ../sass/queue_factory.sass */
 .dayTitle {
   text-align: center;
 }
 
-/* line 32, ../sass/queue_factory.sass */
+/* line 34, ../sass/queue_factory.sass */
 .line {
-  height: 180px;
+  height: 140px;
   padding-left: 12px;
   display: -webkit-flex;
   display: flex;
@@ -43,22 +46,24 @@
   align-items: center;
 }
 
-/* line 45, ../sass/queue_factory.sass */
+/* line 47, ../sass/queue_factory.sass */
 .wrapper {
   width: 200000px;
   padding-left: 32px;
 }
 
-/* line 49, ../sass/queue_factory.sass */
+/* line 51, ../sass/queue_factory.sass */
 .screen {
   width: 100%;
   overflow-x: scroll;
 }
 
-/* line 53, ../sass/queue_factory.sass */
+/* line 55, ../sass/queue_factory.sass */
 .info {
-  margin-right: 2px;
-  padding-right: 4px;
-  float: right;
+  position: absolute;
+  right: 8px;
+  top: calc( 100% - 35px);
+  height: 16px;
+  width: 16px;
   cursor: pointer;
 }
