解決了重複儲存的問題

--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -93,7 +93,7 @@ block content
             - for( var j = 0 ; j < order.jobs.length ; j++)
               - var job = order.jobs[j]
               tr(data-job=job._id)
-                td(data-ctrl="product"  style='width: 300px')= ( job.pid + job.pSpec )
+                td(data-ctrl="product"  style='width: 300px')= ( job.pid + '/'+ job.pSpec )
                 td(data-ctrl="num")= job.count
                 td(data-ctrl="battery")= job.battery
                 td(data-status="yes")
