--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -35,13 +35,14 @@ block content
             .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)" data-time= time)
               - for( var j = index; j < all.length; j++ )
                 - var job = all[j];
+                - job._id = job._id.toString()
                 //- debug
                 //- h1= index
                 //- h4= job.time
                 - if( job.time != time ){ break; }
                 - index++;
                 - var id = 'line'+line+'job'+j;
-                .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job.oid data-status=job.status )
+                .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status )
                   p
                     = job.pid
                     br
@@ -53,17 +54,17 @@ block content
                     br
                     - var uid = { 'data-uid': job._id.toString() + job.time.toString() }
                     - if(job.status == '已結案')
-                      button.status.btn.btn-sm.btn-success(data-id=id data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid)= job.status
+                      button.status.btn.btn-sm.btn-success(data-id=id data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
                     - else if(job.status == '已出貨')
-                      button.status.btn.btn-sm.btn-primary(data-id=id  data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid)= job.status
+                      button.status.btn.btn-sm.btn-primary(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
                     - else if(job.status == '尚未出貨')
-                      button.status.btn.btn-sm.btn-info(data-id=id  data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid)= job.status
+                      button.status.btn.btn-sm.btn-info(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
                     - else if(job.status == '尚未完成')
-                      button.status.btn.btn-sm.btn-warning(data-id=id  data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid)= job.status
+                      button.status.btn.btn-sm.btn-warning(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
                     - else if(job.status == '訂單取消')
-                      button.status.btn.btn-sm.btn-danger(data-id=id  data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid)= job.status
+                      button.status.btn.btn-sm.btn-danger(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
                     - else
-                      button.status.btn.btn-default(data-id=id  data-time=job.time data-oid=job.oid data-status=job.status )&attributes(uid) 尚未設定
+                      button.status.btn.btn-default(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid) 尚未設定
                     - var order = '<p>訂單編號：' + job.oid; //- '<br/>經銷商：' + job. + '<br/>訂單出車日期：2015/5/12</p>'
 
                     //- 測試用功能
