--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -88,7 +88,7 @@ block content
               //- th 狀態
               th 備註
               //- th 排程時間
-              th 產線
+              th.hide 產線
           tbody
             - for( var j = 0 ; j < order.jobs.length ; j++)
               - var job = order.jobs[j]
@@ -100,7 +100,7 @@ block content
                   label.label.label-primary= job.status
                 td(data-ctrl="text")= job.note
                 //- td(data-ctrl="date")= job.todoTime
-                td(data-ctrl="line")= job.line
+                td.hide(data-ctrl="line")= job.line
 
         button.btn.btn-info.ctrl.addItem(data-id=orderId)
           span.glyphicon.glyphicon-plus(aria-hidden='true')
