auth setting init

--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -9,6 +9,7 @@ html
 
     //- script(src="/javascript/jquery-2.1.4.min.js")
     //- script(src="/javascript/bootstrap.min.js")
+    link(rel="stylesheet", href="/stylesheets/auth.css")
   body
     nav.navbar.navbar-default(role='navigation')
       .container-fluid
