--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -26,50 +26,48 @@ block content
       - var index = 0; //- index is using on change day
       - for( var day = 0; day < 3; day++ )
         .day
-          - for( var line = 0; line < lineCount; line++ )
-            - if( line == 0 ) //- title
-              .thumbnail.dayTitle
-                h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + ( d.getUTCDate() + day )
-            //- show job
-            - var time = ( Math.round(d / 86400000) + day ) * 100 + line;
-            .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)" data-time= time)
-              - for( var j = index; j < all.length; j++ )
-                - var job = all[j];
-                - job._id = job._id.toString()
-                //- debug
-                //- h1= index
-                //- h4= job.time
-                - if( job.time != time ){ break; }
-                - index++;
-                - var id = 'line'+line+'job'+j;
-                .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status )
-                  p
-                    = job.pid
-                    br
-                    = job.pSpec
-                    br
-                    = '電池：' + job.battery
-                    br
-                    = '備註：' + job.note
-                    br
-                    - var uid = { 'data-uid': job._id.toString() + job.time.toString() }
-                    - if(job.status == '已結案')
-                      button.status.btn.btn-sm.btn-success(data-id=id data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
-                    - else if(job.status == '已出貨')
-                      button.status.btn.btn-sm.btn-primary(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
-                    - else if(job.status == '尚未出貨')
-                      button.status.btn.btn-sm.btn-info(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
-                    - else if(job.status == '尚未完成')
-                      button.status.btn.btn-sm.btn-warning(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
-                    - else if(job.status == '訂單取消')
-                      button.status.btn.btn-sm.btn-danger(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
-                    - else
-                      button.status.btn.btn-default(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid) 尚未設定
-                    - var order = '<p>訂單編號：' + job.oid; //- '<br/>經銷商：' + job. + '<br/>訂單出車日期：2015/5/12</p>'
+          .thumbnail.dayTitle
+            h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + ( d.getUTCDate() + day )
+          //- show job
+          - var time = ( Math.round(d / 86400000) + day );
+          .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)" data-time= time)
+            - for( var j = index; j < all.length; j++ )
+              - var job = all[j];
+              - job._id = job._id.toString()
+              //- debug
+              //- h1= index
+              //- h4= job.time
+              - if( parseInt(job.time / 100 ) != time ){ break; } //- 可以把 /100 拿掉, 如果我一開始就存正確的資料
+              - index++;
+              - var id = 'line'+line+'job'+j;
+              .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status )
+                p
+                  = job.pid
+                  br
+                  = job.pSpec
+                  br
+                  = '電池：' + job.battery
+                  br
+                  = '備註：' + job.note
+                  br
+                  - var uid = { 'data-uid': job._id.toString() + job.time.toString() }
+                  - if(job.status == '已結案')
+                    button.status.btn.btn-sm.btn-success(data-id=id data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
+                  - else if(job.status == '已出貨')
+                    button.status.btn.btn-sm.btn-primary(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
+                  - else if(job.status == '尚未出貨')
+                    button.status.btn.btn-sm.btn-info(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
+                  - else if(job.status == '尚未完成')
+                    button.status.btn.btn-sm.btn-warning(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
+                  - else if(job.status == '訂單取消')
+                    button.status.btn.btn-sm.btn-danger(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid)= job.status
+                  - else
+                    button.status.btn.btn-default(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid) 尚未設定
+                  - var order = '<p>訂單編號：' + job.oid; //- '<br/>經銷商：' + job. + '<br/>訂單出車日期：2015/5/12</p>'
 
-                    //- 測試用功能
-                    span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
-              - if( index >= all.length ) { index++; }
+                  //- 測試用功能
+                  span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
+            - if( index >= all.length ) { index++; }
 
   #statusDialog.modal.fade.bs-example-modal-sm(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
     .modal-dialog.modal-sm
