--- a/lokovei-ERP/asset/stylesheets/queue_factory.css
+++ b/lokovei-ERP/asset/stylesheets/queue_factory.css
@@ -1,5 +1,6 @@
 /* line 4, ../sass/queue_factory.sass */
 .job {
+  float: left;
   position: relative;
   width: 150px;
   height: 130px;
@@ -8,11 +9,11 @@
   margin-right: 4px;
   cursor: -webkit-grab;
 }
-/* line 12, ../sass/queue_factory.sass */
+/* line 13, ../sass/queue_factory.sass */
 .job:last-child {
   margin-right: 22px;
 }
-/* line 14, ../sass/queue_factory.sass */
+/* line 15, ../sass/queue_factory.sass */
 .job .toRight {
   margin-left: auto;
 }
@@ -31,34 +32,31 @@
   margin-right: 12px;
 }
 
-/* line 30, ../sass/queue_factory.sass */
+/* line 29, ../sass/queue_factory.sass */
 .dayTitle {
   text-align: center;
 }
 
-/* line 34, ../sass/queue_factory.sass */
+/* line 32, ../sass/queue_factory.sass */
 .line {
-  height: 140px;
+  min-height: 140px;
+  max-width: 800px;
   padding-left: 12px;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
 }
 
-/* line 47, ../sass/queue_factory.sass */
+/* line 39, ../sass/queue_factory.sass */
 .wrapper {
   width: 200000px;
   padding-left: 32px;
 }
 
-/* line 51, ../sass/queue_factory.sass */
+/* line 43, ../sass/queue_factory.sass */
 .screen {
   width: 100%;
   overflow-x: scroll;
 }
 
-/* line 55, ../sass/queue_factory.sass */
+/* line 47, ../sass/queue_factory.sass */
 .info {
   position: absolute;
   right: 8px;
