--- a/lokovei-ERP/asset/stylesheets/queue_factory.css
+++ b/lokovei-ERP/asset/stylesheets/queue_factory.css
@@ -40,23 +40,24 @@
 /* line 32, ../sass/queue_factory.sass */
 .line {
   min-height: 140px;
+  height: 600px;
   max-width: 800px;
   padding-left: 12px;
 }
 
-/* line 39, ../sass/queue_factory.sass */
+/* line 40, ../sass/queue_factory.sass */
 .wrapper {
   width: 200000px;
   padding-left: 32px;
 }
 
-/* line 43, ../sass/queue_factory.sass */
+/* line 44, ../sass/queue_factory.sass */
 .screen {
   width: 100%;
   overflow-x: scroll;
 }
 
-/* line 47, ../sass/queue_factory.sass */
+/* line 48, ../sass/queue_factory.sass */
 .info {
   position: absolute;
   right: 8px;
